Fix vertical alignment of VRS logo

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2435,7 +2435,9 @@ body {
     height: inherit;
     line-height: inherit;
     padding-left: 1.25rem;
-    text-decoration: none; }
+    text-decoration: none;
+    display: flex;
+    align-items: center; }
   #header > nav {
     margin-left: auto; }
   #header > nav > a {
